change of backend

--- a/steps/password.html
+++ b/steps/password.html
@@ -3,22 +3,25 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./app.css" rel="stylesheet" type="text/css">
+  <link href="../app.css" rel="stylesheet" type="text/css">
   <title>Home</title>
 </head>
 <body>
   <div class="cardWrapper">
     <div class="card">
       <div class="headingWrapper">
-        <h1 class="heading">Welcome to Global Learning!</h1>
-        <span>👇To get started, click on the button👇</span>
+        <h1 class="heading">Write your favorite password</h1>
+        <div class="input-container">
+          <input class="input" placeholder="password"/>
+          <input class="input" placeholder="repeat password">
+        </div>
       </div>
         <button class="button">
-          <span>Let's Start</span>
+          <span>Next</span>
           <img 
-          class="arrow"
-          src="./images/arrow-forward.png"
-          alt="arrow"
+            class="arrow"
+            src="../images/arrow-forward.png"
+            alt="arrow"
           />
         </button>
     </div>
