--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="./app.css" rel="stylesheet" type="text/css">
-  <title>Home</title>
 </head>
 <body>
   <div class="cardWrapper">
@@ -13,7 +14,7 @@
         <h1 class="heading">Welcome to Global Learning!</h1>
         <span>👇To get started, click on the button👇</span>
       </div>
-        <button class="button">
+        <button id="openFormButton" class="button">
           <span>Let's Start</span>
           <img 
           class="arrow"
@@ -23,5 +24,71 @@
         </button>
     </div>
   </div>
+  <div id="registrationForm" class="fixed inset-0 flex items-center justify-center bg-gray-700 hidden">
+    <div class="bg-white rounded p-8 w-1/2">
+      <div class="mb-4">
+        <h2 class="text-2xl font-bold">Form</h2>
+      </div>
+
+      <div id="step1" class="step">
+        <h3 class="text-lg font-semibold mb-4">Step 1: Full Name</h3>
+        <div class="mb-4">
+          <label for="fullName" class="block text-gray-700 text-sm font-bold mb-2">Full Name</label>
+          <input type="text" id="fullName" class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Enter your full name">
+        </div>
+        <div class="mb-4">
+          <label for="confirmFullName" class="block text-gray-700 text-sm font-bold mb-2">Confirm Full Name</label>
+          <input type="text" id="confirmFullName" class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Confirm your full name">
+        </div>
+        <button id="nextStep1" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+          Next
+        </button>
+      </div>
+
+      <div id="step2" class="step hidden">
+        <h3 class="text-lg font-semibold mb-4">Step 2: Password</h3>
+        <div class="mb-4">
+          <label for="password" class="block text-gray-700 text-sm font-bold mb-2">Password</label>
+          <input type="password" id="password" class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Enter a password">
+        </div>
+        <div class="mb-4">
+          <label for="confirmPassword" class="block text-gray-700 text-sm font-bold mb-2">Confirm Password</label>
+          <input type="password" id="confirmPassword" class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Confirm your password">
+        </div>
+        <button id="nextStep2" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+          Next
+        </button>
+      </div>
+
+      <div id="step3" class="step hidden">
+        <h3 class="text-lg font-semibold mb-4">Step 3: Username</h3>
+        <div class="mb-4">
+          <label for="username" class="block text-gray-700 text-sm font-bold mb-2">Username</label>
+          <input type="text" id="username" class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Choose a username">
+        </div>
+        <button id="nextStep3" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+          Next
+        </button>
+      </div>
+
+      <div id="step4" class="step hidden">
+        <h3 class="text-lg font-semibold mb-4">Step 4: Date of Birth</h3>
+        <div class="mb-4">
+          <label for="dateOfBirth" class="block text-gray-700 text-sm font-bold mb-2">Date of Birth</label>
+          <input type="date" id="dateOfBirth" class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+        </div>
+        <div class="mb-4">
+          <label class="block text-gray-700 text-sm font-bold mb-2">
+            <input type="checkbox" id="agreeToTerms" class="mr-2 leading-tight">
+            I agree to the terms and conditions
+          </label>
+        </div>
+        <button id="submitForm" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded">
+          Submit
+        </button>
+      </div>
+    </div>
+  </div>
+  <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
